# test-fast-app

./: pyproject.toml
.github/workflows/: cicd.yml
app/: main.py
tests/: conftest.py  test_main.py
